@@ -1,3 +1,7 @@
+10/04/2021
+-   Added challenge: Extreme resistance
+-   Added anti damage-reduction weapons
+
 05/04/2021
 -   Added achievements
 -   Added new prestiges: drone quantity, +1 researches, +1 fleet capacity
